--- a/requisitos-generales-obtencion-licencia/index.htm
+++ b/requisitos-generales-obtencion-licencia/index.htm
@@ -217,65 +217,7 @@ function MM_preloadImages() { //v3.0
     <a href="www.buin.cl"></a><a href="www.buin.cl">
     <div align="right"></div>
     </a>
-			<!-- .inside-navigation -->
-</nav><!-- #site-navigation -->
-				<nav id="site-navigation" class="main-navigation grid-container grid-parent sub-menu-right" itemtype="https://schema.org/SiteNavigationElement" itemscope>
-			<div class="inside-navigation">
-								<button class="menu-toggle" aria-controls="primary-menu" aria-expanded="false">
-					<span class="mobile-menu"> Menú</span></button>
-				<div id="primary-menu" class="main-nav"><ul id="menu-menu-principal-3" class=" menu sf-menu">
-				  <li class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-1559"><a href="https://www.buin.cl"><img src="../imagenes/homeregular_106344.png" width="32" height="30"></a></li>
-<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-425"><a > <img src="../imagenes/ididentitycarddriverlicense_109689.png" width="32" height="30"> Licencias de Conducir(LC). <span class="Estilo1"> . . . . . . </span> </a>
-  <ul class="sub-menu">
-	<li id="menu-item-482" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-482"><a href="../unidad-de-licencias-de-conducir/index.htm" target="_top">Unidad de LC.</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-483"><a href="../tipos-de-licencias/index.htm" target="_top">Tipos de Licencias de C.</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-484"><a href="http://appl.smc.cl/lc/SolicitaHoras/muni/buin.aspx" target="_top">Tomar Hora En linea.</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-487"><a href="https://mejoresconductores.conaset.cl/assets/data/pdf/B-ESP/LNC-AUTOMOVILISTAS_actualizaci&#195;&#179;n-22-07-2019.pdf" target="_blank">Libro del Nuevo Conductor</a></li>
-    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-487"><a href="../preguntas-frecuentes/index.htm" target="_top">Pregunta Frecuentes(PF).</a></li>
-    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-487"><a href="../preguntas-frecuentes-para-extranjeros/index.htm" target="_top">PF para Extranjeros.</a></li>
-    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-487"><a href="../material-de-estudio-para-examenes-practicos/index.htm" target="_top">Material de Estudio para Exámenes Prácticos</a></li>   
-    <li id="menu-item-487" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-487"><a href="../requisitos-generales-obtencion-licencia/index.htm" target="_top">Requisitos Generales</a></li>
-	</ul>
-</li>
-<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-8540"><a ><img src="../imagenes/tramiteonline.png" width="32" height="29"> Trámites Online.</a>
-<ul class="sub-menu">
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-484"><a href="http://appl.smc.cl/lc/SolicitaHoras/muni/buin.aspx" target="_top">Tomar Hora de Licencia de C.</a></li>
-	<li id="menu-item-8543" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-8543"><a target="_top" href="https://www.buin.cl/tramites/">Renovación De Licencias de C.</a></li>
-	<li id="menu-item-8542" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-8542"><a target="_top" href="https://pago.smc.cl/pagoPCVv2/muni/buin.aspx">Permisos de Circulación</a></li>	
-    <li id="menu-item-8544" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-8544"><a target="_top" href="https://www.buin.cl/tramites/">Derechos de Aseo</a></li>
-	<li id="menu-item-8545" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-8545"><a target="_top" href="https://www.buin.cl/tramites/">Patentes Comerciales</a></li>
-	<li id="menu-item-8546" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-8546"><a target="_top" href="https://www.buin.cl/tramites/">Pago de Multas</a></li>
-	<li id="menu-item-8547" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-8547"><a target="_top" href="https://www.buin.cl/tramites/">Pagos Varios</a></li>
-	<li id="menu-item-8548" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-8548"><a target="_top" href="https://www.buin.cl/tramites/"> Verificación Doc. Electronicos</a></li>
-</ul>
-</li>
-<li  class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-482"><a><img src="../imagenes/mini-auto-icon_89418.png" width="32" height="30"> Permiso de Circulación. </a>
-  <ul class="sub-menu">
-	<li id="menu-item-8543" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-8543" ><a href="../Solicitud-de-Certificado-de-Avaluo-Fiscal/index.htm" target="_top"> Solicitud de Cert. de Avaluo Fiscal.</a></li>
-	<li id="menu-item-8544" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-8544"><a href="https://pago.smc.cl/pagoPCVv2/muni/buin.aspx" target="_top">Reemprimir tu P. C.</a></li>
-	<li id="menu-item-8544" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-8544"><a href="https://pago.smc.cl/pagoPCVv2/muni/buin.aspx" target="_top">Renovacion de Permiso</a></li>
-	<li id="menu-item-8546" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-8546"><a target="_top" href="https://pago.smc.cl/pagoPCVv2/muni/buin.aspx">Permisos de Circulación</a></li>
-</ul>
-</li>
-<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-484"><a ><img src="../imagenes/engineeringhelmetfirefigther_ingenieria_casc_873.png" width="32" height="30"> Ingenieria E Inspección.</a>
-<ul class="sub-menu">
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-529"><a href="../documentos-ingenieria/Ordenanza%20Derechos%20Municipales.pdf" target="_blank">Corte de Transito Para T.</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-530"><a href="../documentos-ingenieria/REQUISITOS%20OCUPACION%20BNUP%20ACTUALIZADO%202021.pdf" target="_blank">Trabajo en BNUP</a></li>
-    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-530"><a href="../construccion/index.htm" target="_top">Ingenieria E Inspección.</a></li>
-</ul>
-</li>
-<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-537"><a><img src="../imagenes/team-work_88989.png" width="32" height="30"> Equipo de Trabajo y Contactos.</a>
-  <ul class="sub-menu">
-  
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-539"><a href="../construccion/index.htm" target="_top"> Contactenos</a></li>
-</ul>
-</li>
-</ul>
-				</div>			</div>
-		</nav>
-
-		
-		
+				
     <strong><section class="error-404 not-found">
 
 	
@@ -283,59 +225,7 @@ function MM_preloadImages() { //v3.0
  <a href="www.buin.cl"></a><a href="www.buin.cl">
     <div align="right"></div>
     </a><header id="masthead" itemscope="itemscope" itemtype="https://schema.org/WPHeader">
-</header> <nav id="mobile-header" class="main-navigation mobile-header-navigation" itemtype="https://schema.org/SiteNavigationElement" itemscope>
-<div class="inside-navigation grid-container grid-parent Estilo1">
-									<button class="Estilo5" aria-controls="mobile-menu" aria-expanded="false">
-						<span class="mobile-menu">menú</span></button>
-					<div id="mobile-menu" class="main-nav"><ul id="menu-menu-principal-2" class=" menu sf-menu"><li id="menu-item-1559" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-1559"><a href="https://www.buin.cl/"><img src="../imagenes/homeregular_106344.png" width="35" height="30"></a></li>
-<li id="menu-item-425" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-425"><a href="#"><img src="../imagenes/ididentitycarddriverlicense_109689.png" width="32" height="30">L i c e n c i a s<span class="Estilo1">..</span> de<span class="Estilo1">..</span> C o n d u c i r </a>
-  <ul class="sub-menu">
-	<li id="menu-item-482" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-482"><a href="../unidad-de-licencias-de-conducir/index.htm">Unidad de licencias de conducir</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-483"><a href="../tipos-de-licencias/index.htm">Tipos de Licencias</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-484"><a href="../tomar-hora-online/index.htm">Tomar hora online</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-487"><a href="#">Libro del conductor</a></li>
-    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-487"><a href="#">Pregunta Frecuentes</a></li>
-    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-487"><a href="#">Preguntas Frecuentes para Extranjeros</a></li>
-    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-487"><a href="../material-de-estudio-para-examenes-practicos/index.htm">Material de Estudio para Exámenes Prácticos</a></li>   
-    <li id="menu-item-487" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-487"><a href="#">Requisitos generales obtención licencia</a></li>
-</ul>
-</li>
-<li id="menu-item-8540" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-8540"><a href="#"><img src="../imagenes/tramiteonline.png" width="32" height="30">Trámites Online</a>
-  <ul class="sub-menu">
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-484"><a href="http://appl.smc.cl/LC/SolicitaHoras/login.aspx?ReturnUrl=%2flc%2fSolicitaHoras%2fSistema%2ffrmDatosPersonales.aspx">Tomar Hora de Licencia de Conducir</a></li>
-	<li id="menu-item-8543" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-8543"><a target="_blank" href="http://appl.smc.cl/LC/SolicitaHoras/login.aspx?ReturnUrl=%2flc%2fSolicitaHoras%2fSistema%2ffrmDatosPersonales.aspx">Renovación De Licencias de Conducir</a></li>
-	<li id="menu-item-8542" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-8542"><a target="_blank" href="https://pago.smc.cl/pagoPCVv2/Login.aspx?ReturnUrl=%2fpagoPCVv2%2fSistema%2fPrincipal.aspx">Permisos de Circulación</a></li>	
-    <li id="menu-item-8544" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-8544"><a target="_blank" href="https://pagos.munimacul.cl/PagoAseoWeb/">Derechos de Aseo</a></li>
-	<li id="menu-item-8545" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-8545"><a target="_blank" href="https://pagos.munimacul.cl/PagoJplWeb/">Patentes Comerciales</a></li>
-	<li id="menu-item-8546" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-8546"><a target="_blank" href="https://pagos.munimacul.cl/PagoMultasTagWeb">Pago de Multas</a></li>
-	<li id="menu-item-8547" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-8547"><a target="_blank" href="https://pagos.munimacul.cl/PagoMultasRpmn/">Pagos Varios</a></li>
-	<li id="menu-item-8548" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-8548"><a target="_blank" href="#">Verificación De Documentos Electronicos</a></li>
-</ul>
-</li>
-<li id="menu-item-491" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-491"><a href="#"><img src="../imagenes/mini-auto-icon_89418.png" width="32" height="30">P e r m i s o <span class="Estilo1">..</span>de Circulación</a>
-  <ul class="sub-menu">
-	<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-714"><a href="#" target="_blank">Solicitud de Certificado de Evaluo Fiscal</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-486"><a href="../tomar-hora-online/index.htm">Reemprimir tu Permiso de Circulación</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-494"><a href="../documentos-circulacion/texto1.txt">Renovacion de Permiso</a></li>
-	<li id="menu-item-8542" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-8542"><a target="_blank" href="https://pago.smc.cl/pagoPCVv2/Login.aspx?ReturnUrl=%2fpagoPCVv2%2fSistema%2fPrincipal.aspx">Permisos de Circulación</a></li>
-</ul>
-</li>
-<li id="menu-item-528" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-528"><a href="#"><img src="../imagenes/engineeringhelmetfirefigther_ingenieria_casc_873.png" width="32" height="30">I n g e n i e r i a <span class="Estilo1">..</span>E <span class="Estilo1">..</span>I n s p e c c i ó n</a>
-<ul class="sub-menu">
-    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-529"><a href="../documentos-ingenieria/texto1.txt">Permiso Corte de Transito Por Trabajos</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-530"><a href="../documentos-ingenieria/texto1.txt">Informe transito Para Trabajo en Bien Nacional de Uso Publico</a></li>
-    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-530"><a href="../documentos-ingenieria/texto1.txt">Agenda Tu Hora Via 200M</a></li>
-</ul>
-</li>
-<li id="menu-item-537" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-537"><a href="#"><img src="../imagenes/team-work_88989.png" width="32" height="30">C o n t a c t o</a>
-  <ul class="sub-menu">
-	<li id="menu-item-539" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-539"><a href="#">	Contactenos</a></li>
-</ul>
-</li>
-</ul>
-					</div>			</div>
-			<!-- .inside-navigation -->
-</nav><!-- #site-navigation -->
+</header><!-- #site-navigation -->
 				<nav id="site-navigation" class="main-navigation grid-container grid-parent sub-menu-right" itemtype="https://schema.org/SiteNavigationElement" itemscope>
 			<div class="inside-navigation">
 								<button class="menu-toggle" aria-controls="primary-menu" aria-expanded="false">
