--- a/index.htm
+++ b/index.htm
@@ -327,7 +327,7 @@ a:active {
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-530"><a href="index.php/construccion/index.htm" target="_top">Ingenieria E Inspección.</a></li>
 </ul>
 </li>
-<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-537"><a><img src="Transito-Buin/index.php/imagenes/team-work_88989.png" width="32" height="30"> Equipo de Trabajo y Contactos.</a>
+<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-537"><a><img src="index.php/imagenes/team-work_88989.png" width="32" height="30"> Equipo de Trabajo y Contactos.</a>
   <ul class="sub-menu">
   
 	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-539"><a href="index.php/equipo-de-transito/index.htm" target="_top"> Contactenos</a></li>
