--- a/index.htm
+++ b/index.htm
@@ -288,7 +288,7 @@ a:active {
 					<span class="mobile-menu"> Menú</span></button>
 				<div id="primary-menu" class="main-nav"><ul id="menu-menu-principal-3" class=" menu sf-menu">
 				  <li class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-1559"><a href="https://www.buin.cl"><img src="index.php/imagenes/homeregular_106344.png" width="32" height="30"></a></li>
-<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-425"><a > <img src="https://guillermogonzalezd.github.io/Transito-Buin/index.php/imagenes/ididentitycarddriverlicense_109689.png" width="32" height="30"> Licencias de Conducir(LC). <span class="Estilo1"> . . . . . . </span> </a>
+<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-425"><a > <img src="index.php/imagenes/ididentitycarddriverlicense_109689.png" width="32" height="30"> Licencias de Conducir(LC). <span class="Estilo1"> . . . . . . </span> </a>
   <ul class="sub-menu">
 	<li id="menu-item-482" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-482"><a href="index.php/unidad-de-licencias-de-conducir/index.htm" target="_top">Unidad de LC.</a></li>
 	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-483"><a href="index.php/tipos-de-licencias/index.htm" target="_top">Tipos de Licencias de C.</a></li>
