--- a/index.php/Solicitud-de-Certificado-de-Avaluo-Fiscal/index.htm
+++ b/index.php/Solicitud-de-Certificado-de-Avaluo-Fiscal/index.htm
@@ -2,11 +2,11 @@
 <html lang="es-ES">
 <head>
 	<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="../js/jquery-3.5.1.min.js"></script>
-    <script src="../js/main.js"></script>
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/main.js"></script>
     <script src="https://kit.fontawesome.com/cd33816f91.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="css/estilos.css">
 <title> Solicitud de Certificado de Avaluo</title>
 <style type="text/css">
 img.wp-smiley,
