--- a/index.php/Solicitud-de-Certificado-de-Avaluo-Fiscal/index.htm
+++ b/index.php/Solicitud-de-Certificado-de-Avaluo-Fiscal/index.htm
@@ -2,11 +2,11 @@
 <html lang="es-ES">
 <head>
 	<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="js/jquery-3.5.1.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="../js/jquery-3.5.1.min.js"></script>
+    <script src="../js/main.js"></script>
     <script src="https://kit.fontawesome.com/cd33816f91.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 <title> Solicitud de Certificado de Avaluo</title>
 <style type="text/css">
 img.wp-smiley,
@@ -329,17 +329,13 @@ a:active {
 </ul>
 </li>
 </ul>
-				</div>			</div>
-		</nav>
+</div>			</div>
+</nav>
 
 		
 		
     <strong><section class="error-404 not-found">
-
-	
-	</section></strong><section class="error-404 not-found"><strong><header class="page-header"></header></strong><header class="page-header">  
-	
-	
+</section></strong><section class="error-404 not-found"><strong><header class="page-header"></header></strong><header class="page-header">  
 <h1 class="Estilo1"><strong>Solicitud de Certificado de Avaluo Fiscal</strong>.</h1>
 <h2 class="Estilo2"><span class="Estilo22">Se informa que para solicitar el certificado de avalu&oacute;. Lo Primero es Visitar el Sitio Web de SII. </span><span class="Estilo29"><span class="Estilo31"><a href="https://www.sii.cl/servicios_online/1049-.html" class="Estilo29">https://www.sii.cl/servicios_online/1049-.html</a></span></span><span class="Estilo18"><a href="https://www.sii.cl/servicios_online/1049-.html" class="Estilo23">.</a> </span></h2>
 <h2 class="Estilo2"><span class="Estilo22">Si el Modelo de su vehículo <span class="Estilo33">NO</span> figura en los listados del sitio Web, será la Directora de Tránsito quien homologue el valor de tasación fiscal a uno de similares características, del Presente  listados, según lo establecido en el Decreto Ley N° 3.063 sobre Rentas Municipales, artículo 17.</span></h2>
